--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,55 @@
-*{
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
+* {
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    
-    }
+    font-family: 'Source Sans Pro', sans-serif;
 
-header{
-background: rgb(0,14,36);
-background: linear-gradient(90deg, rgba(0,14,36,1) 15%, rgba(9,98,121,1) 73%, rgba(0,212,255,1) 100%);
+}
+
+#menu{
+    background-color: rgb(34, 34, 34);
+}
+
+#menu ul {
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+}
+
+.corpodonome{
+    font-family: 'italic';
+background-color: rgb(34, 34, 34);
+color: rgb(0, 255, 191); 
+height: 70px;
+padding: 20px;
+font-size: 45px; 
+}
+
+#menu ul li {
+    display: inline;
+}
+
+#menu ul li a {
+    color: #FFF;
+    padding: 25px;
+    display: inline-block;
+    text-decoration: none;
+    transition: background .6s;
+}
+
+#menu ul li a:hover {
+    background-color: rgb(0, 255, 191);
+}
+
+
+.corpodosite{
+    background-color: rgb(44, 44, 44);
+    position:absolute;
+	width:100%;
+	height:100%;
+
 }
