--- a/estilo.css
+++ b/estilo.css
@@ -10,6 +10,8 @@
 
 #menu{
     background-color: rgb(34, 34, 34);
+    box-shadow: 0 3px 20px black;
+
 }
 
 #menu ul {
@@ -18,23 +20,27 @@
     justify-content: center;
     list-style: none;
     padding: 0;
+
 }
 
 .corpodonome{
     font-family: 'italic';
-background-color: rgb(34, 34, 34);
-color: rgb(0, 255, 191); 
+background-color: #222222;
+color: #00ffbf; 
 height: 100px;
 padding: 5px;
 font-size: 38px; 
 }
 
 .nomepag{
+    font-size: 40px;
     padding: 30px;
+    
 }
 
 #menu ul li {
     display: inline;
+    
 }
 
 #menu ul li a {
@@ -43,17 +49,65 @@ font-size: 38px;
     display: inline-block;
     text-decoration: none;
     transition: background .6s;
+    
 }
 
 #menu ul li a:hover {
     background-color: rgb(0, 255, 191);
+    box-shadow: 0 3px 20px black;
 }
 
 
 .corpodosite{
-    background-color: rgb(44, 44, 44);
+    background: rgb(3,3,3);
+    background: linear-gradient(10deg, rgba(3,3,3,1) 29%, rgba(0,37,28,1) 67%, rgba(0,6,5,1) 100%);
     position:absolute;
 	width:100%;
 	height:100%;
 
 }
+
+.esp{
+    margin-left: 100px;
+}
+
+.footer{ 
+    position: fixed;
+    left:0;
+    bottom: 0;
+    background-color: #040a0a;
+    width: 100%;
+    height: 50px;    
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-family: Trebuchet MS;
+         opacity: 0.7;
+    }
+    
+    .sb{
+        margin-top: 50px;
+        max-width: 700px;
+        text-align: justify;
+        color: #00ffbf;
+        text-align: justify;
+       font-size: 70px;
+    }
+
+    .sb2{
+        max-width: 700px;
+        text-align: justify;
+        text-align: justify;
+        font-size: 40px;
+        color: #00ffbf;
+        padding: 3px;
+    }
+
+    .sb3{
+
+        font-size: clamp(1em, 1em + 1vw, 1.5em);
+        color: #00ffbf;
+        max-width: 700px;
+        text-align: justify;
+        display: block;
+    }
