--- a/estilo.css
+++ b/estilo.css
@@ -115,6 +115,13 @@ font-size: 38px;
        font-size: 70px;
     }
 
+    .textoif{
+        margin-top: 50px;
+        max-width: 700px;
+        color: #00ffbf;
+       font-size: 40px;
+    }
+
     .sb2{
         max-width: 700px;
         text-align: justify;
